--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@
               <div
                 class="absolute -top-4 -right-4 bg-white dark:bg-slate-800 rounded-2xl p-3 shadow-xl border border-slate-200 dark:border-slate-700 animate-bounce"
                 style="animation-duration: 3s" aria-hidden="true">
-                <i class="fa-brands fa-react text-3xl text-[#61DAFB]"></i>
+                <i class="fa-brands fa-angular text-3xl text-[#61DAFB]"></i>
               </div>
               <div
                 class="absolute top-1/4 -left-6 bg-white dark:bg-slate-800 rounded-2xl p-3 shadow-xl border border-slate-200 dark:border-slate-700 animate-bounce"
                 style="animation-duration: 2.5s; animation-delay: 0.5s" aria-hidden="true">
-                <i class="fa-brands fa-vuejs text-3xl text-[#4FC08D]"></i>
+                <i class="fa-brands fa-microsoft text-3xl text-[#4FC08D]"></i>
               </div>
               <div
                 class="absolute -bottom-4 -right-4 bg-white dark:bg-slate-800 rounded-2xl p-3 shadow-xl border border-slate-200 dark:border-slate-700 animate-bounce"
